client: Implemented the character creator up to submittal

--- a/client/src/style/misc/_settings.scss
+++ b/client/src/style/misc/_settings.scss
@@ -1,7 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Francois+One');
+
 $bgGray_75: rgba(50,57,61, 0.75);
-
-
-
 $errRed: rgb(68,14,14);
 $errRedBright: rgb(172, 79, 79);
 $primary: rgb(0,59,94);
@@ -10,3 +9,5 @@ $secondary: rgb(12,48,12);
 $bright: rgb(145,145,165);
 $bright_50: rgba(90,110,120, 0.5);
 $dark: rgb(50,57,61);
+$lightGray: rgb(189, 189, 189);
+$lightGray_50: rgba(189,189,189,0.5);
